// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test making the AccordionItem invisible 1`] = `
<div
  className="ui-accordionitem accordionItem invisible"
  style={Object {}}
>
  <Item
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className=""
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    hiddenLeftButton={false}
    hiddenRightButton={false}
    id=""
    initialToggle={false}
    layout={5}
    leftButton={null}
    location="none"
    noedit={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    title="Test Title"
    useedit={false}
    visible={false}
    widget={null}
  />
</div>
`;

exports[`Test retrieval of AccordionItem props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "hiddenLeftButton": false,
  "hiddenRightButton": false,
  "id": "",
  "initialToggle": false,
  "layout": 5,
  "leftButton": null,
  "location": "none",
  "noedit": false,
  "noripple": false,
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onFocus": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onMouseOut": [Function],
  "onUpdate": [Function],
  "rightButton": null,
  "selected": false,
  "sizing": "normal",
  "stacked": false,
  "style": Object {},
  "title": "",
  "useedit": false,
  "visible": true,
  "widget": null,
}
`;

exports[`Test the creation of a AccordionItem control 1`] = `
<div
  className="ui-accordionitem accordionItem test-class"
  style={Object {}}
>
  <Item
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="test-class"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    hiddenLeftButton={false}
    hiddenRightButton={false}
    id=""
    initialToggle={false}
    layout={5}
    leftButton={null}
    location="none"
    noedit={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    title="Test Title"
    useedit={false}
    visible={true}
    widget={null}
  />
</div>
`;

exports[`Test the disabling of the AccordionItem 1`] = `
<div
  className="ui-accordionitem accordionItem disabled nohover"
  style={Object {}}
>
  <Item
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className=""
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={true}
    focus={false}
    hiddenLeftButton={false}
    hiddenRightButton={false}
    id=""
    initialToggle={false}
    layout={5}
    leftButton={null}
    location="none"
    noedit={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    title="Test Title"
    useedit={false}
    visible={true}
    widget={null}
  />
</div>
`;
